[package]
name = "vmr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
cpal = "0.16.0"
hound = "3.5.1"
rayon = "1.11.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"